--- a/css/hyui.css
+++ b/css/hyui.css
@@ -8686,6 +8686,7 @@ body.noscroll {
 
 .wrapper {
   width: 100%;
+  height: 100%;
   margin: 0px auto;
 }
 @media screen and (max-width: 767px) {
@@ -8697,6 +8698,9 @@ body.noscroll {
 }
 .wrapper.Straight .header > .container {
   padding: 80px 30px;
+}
+.wrapper.Straight .main {
+  border-bottom: 30px solid #896936;
 }
 
 .container {
@@ -8855,16 +8859,17 @@ a.more:hover:after, a.more:focus:after, a.more.active:after {
 }
 .meetingblock2 .single_meeting .title {
   color: #896936;
-  font-size: 5.5em;
-  padding: 60px 30px 50px;
+  font-size: 5.8em;
+  padding: 60px 50px 50px;
   line-height: 1.5em;
   font-weight: bolder;
 }
 .meetingblock2 .single_meeting .time {
-  font-size: 4.5em;
+  font-size: 5em;
   line-height: 1.5em;
   font-weight: bolder;
   padding: 30px 30px 50px;
+  letter-spacing: 2px;
 }
 .meetingblock2 .single_meeting .time span {
   display: block;
