--- a/sass/page/_template.scss
+++ b/sass/page/_template.scss
@@ -25,7 +25,9 @@ body {
 // 最外圍預設為100%
 .wrapper {
   width: 100%;
+  height: 100%;
   margin: 0px auto;
+
   @include screen('mobile') {
     background: #fff;
     overflow: hidden;
@@ -36,6 +38,9 @@ body {
       > .container {
         padding: 80px 30px;
       }
+    }
+    .main {
+      border-bottom: 30px solid $primaryColor;
     }
   }
 }
@@ -53,6 +58,7 @@ body {
   margin: 0 50px 0;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 15px;
+
   // 可先設定一個中央區塊最大寬，限制accesskey對齊
   h2 {
     line-height: 1.25em;
